# vkusnyashki

./: .gitignore  README.md  db.sqlite3  main.py  manage.py  package-lock.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
menu/: admin.py  models.py  signals.py  sse.py  urls.py  views.py
menu/fixtures/: foods.json
menu/migrations/: 0001_initial.py  0002_alter_food_name_alter_food_price.py  0003_alter_food_price.py  0004_alter_food_description_alter_food_name_and_more.py  0005_category_monitor_food_category_category_monitor.py  0006_alter_category_monitor.py  0007_alter_food_category.py
menu/templates/menu/: index.html  monitor.html
static/css/: style.css
static/js/: script.js
