[project]
name = "vkusnyashki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "daphne>=4.2.1",
    "django>=5.2.8",
    "pillow>=12.0.0",
    "uvicorn>=0.38.0",
]
[tool.uv.scripts]
dev = "python manage.py runserver"
migrate = "python manage.py migrate"
createsuperuser = "python manage.py createsuperuser"
